TEST_PROGRAMS/INVALID/04/2.go
package main

func main() {
    //Invalid hex
    var x = 0x 12
    x++ // "use" x
}
